tests/machine/x/c/in_operator_extended.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/in_operator_extended.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:132:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  132 |   printf("%d\n", (contains_list_int(ys, 1)) ? "true" : "false");
      |           ~^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |            |                                         |
      |            int                                       char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:133:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  133 |   printf("%d\n", (contains_list_int(ys, 2)) ? "true" : "false");
      |           ~^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |            |                                         |
      |            int                                       char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:134:22: error: invalid initializer
  134 |   map_string_int m = (tmp_item_t){.a = 1};
      |                      ^
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:135:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  135 |   printf("%d\n", (map_string_int_contains(m, "a")) ? "true" : "false");
      |           ~^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |            |                                                |
      |            int                                              char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:136:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  136 |   printf("%d\n", (map_string_int_contains(m, "b")) ? "true" : "false");
      |           ~^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |            |                                                |
      |            int                                              char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:137:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  137 |   printf("%d\n", (contains_string(s, "ell")) ? "true" : "false");
      |           ~^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |            |                                          |
      |            int                                        char *
      |           %s
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:138:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  138 |   printf("%d\n", (contains_string(s, "foo")) ? "true" : "false");
      |           ~^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |            |                                          |
      |            int                                        char *
      |           %s

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:50Z
